--- a/asstes/styles/index.css
+++ b/asstes/styles/index.css
@@ -1,5 +1,6 @@
 :root {
-
+  --line-height-one-hundred:100%;
+  --yellow-color:rgba(253, 222, 103, 1);
 }
 
 * {
@@ -10,12 +11,257 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--bg-color);
-  font-family: Inter;
+  font-family: lato , Vazirmatn;
 }
 
 .container {
-  width: 1280px;
+  width: 1300px;
   margin-right: auto;
   margin-left: auto;
 }
 
+.header{
+  background: linear-gradient(rgba(42, 64, 50, 1),rgba(58, 94, 70, 1));
+}
+
+.header .nav{
+  padding-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .nav ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  /* background-color: azure; */
+}
+
+.header .nav ul li a{
+  text-decoration: none;
+  margin-right: 32px;
+}
+
+.header h1{
+
+}
+
+.hero{
+  margin-top: 63px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 24px;
+}
+
+.hero .right{
+  flex-grow: 1;
+  /* background-color: aquamarine; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero .right ul{
+  flex-shrink: 1;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.hero .right li{
+  margin-bottom: 21px;
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+
+.hero .right .inside{
+  flex-grow: 1;
+  text-align: center;
+  padding: 0 134px;
+}
+
+/* .hero .right .inside .bar{
+  position: relative;
+  background-color: blueviolet;
+
+}
+
+.hero .right .inside .bar p{
+  --price-weight : 500;
+  --price-size : 36px;
+  --price-color:rgba(255, 255, 255, 1);
+  font-weight: var(--price-weight);
+  font-size: var(--price-size);
+  line-height: var(--line-height-one-hundred);
+  color: var(--price-color);
+  position: absolute;
+  top: 79px;
+}
+
+.hero .right .inside .bar div:nth-of-type(1){
+  --off-weight : 700;
+  --off-size : 26px;
+  --off-color:rgba(24, 24, 24, 1);
+  width: 110px;
+  height: 110px;
+  padding:28px;
+  border-radius: 50%;
+  background-color: var(--yellow-color);
+  font-weight: var(--off-weight);
+  font-size: var(--off-size);
+  line-height: var(--line-height-one-hundred);
+  color: var(--off-color);
+  position: absolute;
+  left: 100px;
+  top: 114px;
+  z-index: 2;
+}
+
+.hero .right .inside .bar div:nth-of-type(2){
+  width: 308px;
+  height: 308px;
+  border-radius: 50%;
+  background-color: rgba(27, 45, 34, 1);
+  position: absolute;
+  right: 0;
+  top: 126px;
+  z-index: 0;
+}
+
+.hero .right .inside .bar div:nth-of-type(3){
+  width: 318px;
+  height: 318px;
+  border-radius: 50%;
+  background-color: rgba(27, 45, 34, 1);
+  position: absolute;
+  top: 234px;
+  z-index: 0;
+}
+
+.hero .right .inside .bar img{
+  position: relative;
+  vertical-align: bottom;
+} */
+
+.hero .right .inside{
+  flex-grow: 1;
+  text-align: center;
+  position: relative;
+}
+
+.hero .right .inside p{
+  --price-weight : 500;
+  --price-size : 36px;
+  --price-color:rgba(255, 255, 255, 1);
+  font-weight: var(--price-weight);
+  font-size: var(--price-size);
+  line-height: var(--line-height-one-hundred);
+  color: var(--price-color);
+  position: absolute;
+  left: 134px;
+  top: 79px;
+}
+
+.hero .right .inside div:nth-of-type(1){
+  --off-weight : 700;
+  --off-size : 26px;
+  --off-color:rgba(24, 24, 24, 1);
+  width: 110px;
+  height: 110px;
+  padding:28px;
+  border-radius: 50%;
+  background-color: rgba(253, 222, 103, 1);
+  font-weight: var(--off-weight);
+  font-size: var(--off-size);
+  line-height: var(--line-height-one-hundred);
+  color: var(--off-color);
+  position: absolute;
+  left: 229px;
+  top: 114px;
+  z-index: 2;
+}
+
+.hero .right .inside div:nth-of-type(2){
+  width: 308px;
+  height: 308px;
+  border-radius: 50%;
+  background-color: rgba(27, 45, 34, 1);
+  position: absolute;
+  right: 134px;
+  top: 126px;
+  z-index: 0;
+}
+
+.hero .right .inside div:nth-of-type(3){
+  width: 318px;
+  height: 318px;
+  border-radius: 50%;
+  background-color: rgba(27, 45, 34, 1);
+  position: absolute;
+  left: 134px;
+  top: 234px;
+  z-index: 0;
+}
+
+.hero .right .inside img{
+  position: relative;
+  vertical-align: bottom;
+}
+
+.hero .left{
+  margin-top: 25px;
+  width: 35%;
+  /* background-color: brown; */
+}
+
+.hero .left p:nth-of-type(1){
+  --year-weight : 400;
+  --year-size : 60px;
+  --year-color:rgba(255, 255, 255, 0.3);
+  padding: 0;
+  margin: 0 0 24px 0;
+  font-weight: var(--year-weight);
+  font-size: var(--year-size);
+  line-height: var(--line-height-one-hundred);
+  color: var(--year-color);
+
+}
+
+.hero .left h2{
+  --header-weight : 900;
+  --header-size : 112px;
+  --line-height-one-hundred:100px;
+  --header-color:rgba(255, 255, 255, 1);
+  padding: 0;
+  margin: 0 0 24px 0;
+  font-weight: var(--header-weight);
+  font-size: var(--header-size);
+  line-height: var(--line-height-one-hundred);
+  letter-spacing: 13%;
+  color: var(--header-color);
+}
+
+.hero .left p:nth-of-type(2){
+  --year-weight : 400;
+  --year-size : 25px;
+  --year-color:rgba(255, 255, 255, 0.8);
+  padding: 0;
+  margin: 0 0 50px 0;
+  font-weight: var(--year-weight);
+  font-size: var(--year-size);
+  line-height: var(--line-height-one-hundred);
+  color: var(--year-color);
+}
+
+.btn-wrapper a{
+  text-decoration: none;
+  border-radius: 6px;
+  padding: 16px 40px;
+  background-color: var(--yellow-color);
+  display: inline-block;
+}
