--- a/asstes/styles/index.css
+++ b/asstes/styles/index.css
@@ -322,6 +322,7 @@ body {
 
 .new-collection .collection .sunglasses p {
   padding: 24px 0 80px 0;
+  margin: 0;
 }
 
 .new-collection .collection .jacket {
@@ -558,4 +559,27 @@ footer {
   font-size: var(--counter-size);
   line-height: var(--line-height-one-hundred);
   color: var(--white-color);
+}
+
+
+
+/* Greater than or equal to 1000px */
+/* @media (width >=1000px) {} */
+
+/* Less than or equal to 700px */
+@media (width <=700px) {
+  .container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+/* Between 700px and 1000px */
+@media (700px <width <1000px) {
+  .container {
+    width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
