--- a/asstes/styles/index.css
+++ b/asstes/styles/index.css
@@ -12,7 +12,7 @@
   --menue-size: 18px;
   --menue-height: 40px;
   --new-collection-weight: 700;
-
+  --mobile-padding-left: 15px
 }
 
 * {
@@ -238,45 +238,37 @@ body {
 }
 
 .brands ul {
+  display: flex;
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  gap: 82px;
-  padding: 30px 0;
 }
 
 .new-collection {
   padding: 0 0 var(--section-distance) 0;
-
 }
 
 .new-collection h3,
 .best-sellers h3 {
   margin: 0;
-  padding: var(--section-distance) 0;
-
   --h3-weight: 400;
-  --h3-size: 48px;
-  --h3-height: 48px;
   font-weight: var(--h3-weight);
-  font-size: var(--h3-size);
-  line-height: var(--h3-height);
   color: var(--black-color2);
 }
 
-.collection {
-  display: flex;
-  gap: 80px;
-}
 
-.new-collection p {
-  --jacket-size: 24px;
-  --jacket-height: 40px;
+
+.new-collection .collection p {
   font-weight: var(--new-collection-weight);
-  font-size: var(--jacket-size);
-  line-height: var(--jacket-height);
   color: var(--black-color2);
+}
+
+.new-collection .collection .jacket {
+  --jacket-bg: rgba(197, 194, 202, 1);
+  background-color: var(--jacket-bg);
+  text-align: center;
+  border-radius: 24px;
+  position: relative;
 }
 
 .new-collection .collection .jacket p {
@@ -289,34 +281,24 @@ body {
   margin: 0;
 }
 
-.new-collection .collection .jacket {
-  --jacket-bg: rgba(197, 194, 202, 1);
-  background-color: var(--jacket-bg);
-  text-align: center;
-  width: 40%;
-  border-radius: 24px;
-  position: relative;
-}
-
 .new-collection .collection .jacket img {
   vertical-align: bottom;
 }
 
 .new-collection .b-btn {
   text-align: center;
-}
-
-.new-collection .b-btn a {
-  background-color: var(--black-color);
-  color: var(--white-color);
   position: absolute;
   bottom: 24px;
   right: 24px;
 }
 
+.new-collection .b-btn a {
+  background-color: var(--black-color);
+  color: var(--white-color);
+}
+
 .new-collection .collection .sunglasses {
   background-color: var(--yellow-color);
-  flex-grow: 1;
   display: flex;
   justify-content: space-around;
   align-items: end;
@@ -585,6 +567,40 @@ footer {
     vertical-align: bottom;
   }
 
+  .brands ul {
+    gap: 82px;
+    padding: 30px 0;
+  }
+
+  .collection {
+    display: flex;
+    gap: 80px;
+  }
+
+  .new-collection h3,
+  .best-sellers h3 {
+    padding: var(--section-distance) 0;
+    --h3-size: 48px;
+    --h3-height: 48px;
+    font-size: var(--h3-size);
+    line-height: var(--h3-height);
+  }
+
+  .new-collection .collection p {
+    --jacket-size: 24px;
+    --jacket-height: 40px;
+    font-size: var(--jacket-size);
+    line-height: var(--jacket-height);
+  }
+
+  .new-collection .collection .jacket {
+    width: 40%;
+  }
+
+  .new-collection .collection .sunglasses {
+    flex-grow: 1;
+  }
+
   .menubar * {
     display: none;
   }
@@ -599,7 +615,7 @@ footer {
 
   .hero {
     margin-top: 27px;
-    padding-left: 24px;
+    padding-left: var(--mobile-padding-left);
     flex-direction: column;
     justify-content: left;
     height: auto;
@@ -665,6 +681,48 @@ footer {
     display: flex;
     justify-content: space-between;
     padding: 12px 18px;
+  }
+
+  .brands ul {
+    justify-content: space-between;
+    padding: 12px;
+
+  }
+
+  .new-collection {
+    --section-distance: 32px;
+    padding: 0 var(--mobile-padding-left) var(--section-distance) var(--mobile-padding-left);
+  }
+
+  .new-collection h3,
+  .best-sellers h3 {
+    padding: var(--section-distance) 0;
+    --h3-size: 32px;
+    --h3-height: 32px;
+    font-size: var(--h3-size);
+    line-height: var(--h3-height);
+  }
+
+  .new-collection .collection p {
+    --jacket-size: 18px;
+    --jacket-height: 18px;
+    font-size: var(--jacket-size);
+    line-height: var(--jacket-height);
+  }
+
+  .new-collection .collection .jacket p {
+    text-align: left;
+    padding: 14px 0 0 14px;
+  }
+
+  .new-collection .collection .sunglasses .off {
+    padding-bottom: px;
+
+    --off-size: 48px;
+    font-weight: var(--new-collection-weight);
+    font-size: var(--off-size);
+    line-height: var(--one-hundred-percent);
+    color: var(--black-color2);
   }
 
   .nav *,
