--- a/asstes/styles/index.css
+++ b/asstes/styles/index.css
@@ -621,7 +621,7 @@ footer {
     flex-direction: column;
     justify-content: start;
     height: auto;
-    border: 5px salmon solid;
+    /* border: 5px salmon solid; */
     margin: 0;
     padding: 0;
   }
